# vibetown

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  containers.yml
deploy/docker/: Dockerfile.engine  Dockerfile.server  Dockerfile.web
deploy/helm/vibetown/: Chart.yaml  values.yaml
deploy/kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
docs/: architecture.md  developer-guide.md
engine/: go.mod  go.sum
engine/cmd/gt-proxy-server/: main.go
engine/cmd/vibetown-engine/: main.go
engine/cmd/vt/: main.go
engine/docs/: INSTALLING.md  WASTELAND.md  glossary.md  proxy-server.md
engine/docs/design/: formula-resolution.md  mol-mall-design.md
engine/docs/guides/: mvgt-integration.md
engine/internal/: .events.jsonl
engine/scripts/: bump-version.sh  test-gce-install.sh
proto/: buf.gen.yaml  buf.yaml
server/: Cargo.toml
server/crates/deployment/: Cargo.toml
server/crates/deployment/src/: lib.rs
server/crates/user-auth/: Cargo.toml
server/crates/user-auth/src/: config.rs  errors.rs  lib.rs  middleware.rs  models.rs  password.rs  session.rs
server/crates/user-auth/src/providers/: ldap.rs  local.rs  mod.rs  oidc.rs
server/dev_assets/: config.json  db.v2.sqlite
tests/e2e/: docker-compose.test.yml  test_api.sh
tools/scripts/: dev.sh  migrate.sh
web/: package.json  pnpm-lock.yaml
(+651 files in other folders)
