[package]
name = "deployment"
version = "0.1.35"
edition = "2024"

[dependencies]
db = { path = "../db" }
utils = { path = "../utils" }
git = { path = "../git" }
services = { path = "../services" }
worktree-manager = { path = "../worktree-manager" }
executors = { path = "../executors" }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
client-info = { path = "../client-info" }
tokio = { workspace = true }
sqlx = "0.8.6"
serde_json = { workspace = true }
git2 = { workspace = true }
futures = "0.3.31"
axum = { workspace = true }
